# ccraft

./: .gitignore  .gitmodules  CMakeLists.txt  TODO
include/ccraft/: chunk.h  meshing.h  side.h  voxel.h  voxel_type.h  world.h
include/ccraft/engine/: camera.h  debug.h  direction.h  error.h  gl_includes.h  input.h  mat4.h  math.h  mesh.h  quaternion.h  renderer.h  shaders.h  texture.h  texture_array.h  transform.h  utils.h  vec2.h  vec3.h  vec3i.h  vertex.h
src/: CMakeLists.txt  chunk.c  main.c  meshing.c  voxel_type.c  world.c
src/engine/: camera.c  error.c  input.c  mat4.c  mesh.c  quaternion.c  renderer.c  shaders.c  texture.c  texture_array.c  transform.c  utils.c  vec3.c  vec3i.c
tests/: CMakeLists.txt  test.c  test_mat4.c
tests/include/: tests.h
